<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_register_image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin_small"
        android:id="@+id/enter_register_code"
        android:text="@string/enter_register_code"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/normalText"
        app:layout_constraintTop_toBottomOf="@id/register_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin_small"
        android:id="@+id/register_code_we_send"
        android:text="@string/register_code_we_send"
        android:textStyle="normal"
        android:textColor="@color/colorGrey"
        android:gravity="center"
        android:textSize="@dimen/smallText"
        app:layout_constraintTop_toBottomOf="@id/enter_register_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        style="@style/editText"
        android:id="@+id/register_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_default_code"
        android:maxLength="6"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_code_we_send"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>