<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_userphoto"
            android:layout_height="@dimen/settings_userphoto"
            android:src="@drawable/default_photo"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:civ_border_width="@dimen/settings_userphoto_border" />

        <TextView
            android:id="@+id/settings_fullname"
            android:layout_width="@dimen/settings_username_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            tools:text="@string/settings_default_username"
            android:textSize="@dimen/normalText"
            app:layout_constraintEnd_toEndOf="@id/settings_header_block"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
            app:layout_constraintTop_toTopOf="@id/settings_header_block" />
        <TextView
            android:id="@+id/settings_status"
            android:layout_width="@dimen/settings_username_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_small"
            android:layout_marginEnd="@dimen/horizontal_margin"
            tools:text="@string/settings_default_status"
            android:textSize="@dimen/smallText"
            app:layout_constraintEnd_toEndOf="@id/settings_header_block"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
            app:layout_constraintTop_toBottomOf="@id/settings_fullname" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/horizontal_margin_small"
        android:text="@string/account"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/vertical_margin_large"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn_change_number_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_text_account"
            style="@style/settingsButtons">

            <TextView
                android:id="@+id/settings_phone_number"
                style="@style/normalText"
                tools:text="@string/default_phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/settings_change_number"
                style="@style/smallText"
                android:text="@string/settings_change_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_phone_number" />

            <View
                style="@style/separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_change_number" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_username"
            tools:text="@string/settings_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_change_login"
            android:text="@string/settings_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_username"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_change_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_login"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_bio"
            android:text="@string/settings_default_bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settings_change_bio"
            android:text="@string/settings_label_bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_bio"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_btn_change_photo_width"
        android:layout_height="@dimen/settings_btn_change_photo_height"
        android:src="@drawable/ic_camera"
        app:civ_border_color="@color/colorGrey"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:civ_border_width="@dimen/settings_userphoto_border"
        app:layout_constraintBottom_toBottomOf="@id/settings_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block" />

</androidx.constraintlayout.widget.ConstraintLayout>